--- a/user-service/application.yml
+++ b/user-service/application.yml
@@ -3,4 +3,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8766
+      defaultZone: http://localhost:8766/eureka/
