--- a/api-gateway/application.yml
+++ b/api-gateway/application.yml
@@ -1,12 +1,12 @@
 server:
   port: 8767
 spring:
-  cloud:
-      gateway:
-        discovery:
-          locator:
-            enabled: true # Включить автоматическое обнаружение маршрутов
-            lower-case-service-id: true # Преобразует имена сервисов в нижний регистр
+  # cloud:
+  #     gateway:
+  #       discovery:
+  #         locator:
+  #           enabled: true # Включить автоматическое обнаружение маршрутов
+  #           lower-case-service-id: true # Преобразует имена сервисов в нижний регистр
   eureka:
     client:
       service-url:
