--- a/api-gateway/application.yml
+++ b/api-gateway/application.yml
@@ -1,13 +1,13 @@
 server:
   port: 8767
 spring:
-  # cloud:
-  #     gateway:
-  #       discovery:
-  #         locator:
-  #           enabled: true # Включить автоматическое обнаружение маршрутов
-  #           lower-case-service-id: true # Преобразует имена сервисов в нижний регистр
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://localhost:8766/eureka/ # Адрес Eureka сервера
+  cloud:
+      gateway:
+        discovery:
+          locator:
+            enabled: true
+            lower-case-service-id: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8766/eureka/
