--- a/api-gateway/application.yml
+++ b/api-gateway/application.yml
@@ -1,5 +1,12 @@
 server:
   port: 8767
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
 eureka:
   client:
     service-url:
