--- a/api-gateway/application.yml
+++ b/api-gateway/application.yml
@@ -7,6 +7,9 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+      default-filters:
+        - StripPrefix=1
+        
 eureka:
   client:
     service-url:
