--- a/api-gateway/application.yml
+++ b/api-gateway/application.yml
@@ -3,9 +3,16 @@ server:
 spring:
   security:
     oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:8080/realms/spring-boot-microservices-realm
+      client:
+        registration:
+          keycloak:
+            client-id: api-gateway-client
+            client-secret: PIxVZhY42eTeUpc0WWXNuL8zOm2lj0jW
+            scope: openid,profile,email
+            redirect-uri: http://localhost:8767/login/oauth2/code/keycloak
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8080/realms/spring-boot-microservices-realm
   cloud:
     gateway:
       discovery:
