--- a/api-gateway/application.yml
+++ b/api-gateway/application.yml
@@ -22,6 +22,9 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+      default-filters:
+        - TokenRelay
+          
 
 eureka:
   client:
