--- a/user-service/application.yml
+++ b/user-service/application.yml
@@ -6,6 +6,9 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/spring-boot-microservices-realm
+  kafka:
+    consumer:
+      auto-offset-reset: earliest
 eureka:
   client:
     service-url:
