--- a/image-processing-service/application.yml
+++ b/image-processing-service/application.yml
@@ -19,6 +19,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
     show-sql: true
     format-sql: true
 eureka:
