--- a/api-gateway-service-v1/application.yml
+++ b/api-gateway-service-v1/application.yml
@@ -19,3 +19,33 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8766/eureka/
+
+# Actuator endpoints
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+# Resilience4J Properties
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+        slidingWindowType: "COUNT_BASED"
+        slidingWindowSize: 10
+        failureRateThreshold: 50
+        waitDurationInOpenState: "5s"
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+  timelimiter:
+    configs: 
+      default:
+        timeout-duration: "3s"
