--- a/api-gateway-service-v1/application.yml
+++ b/api-gateway-service-v1/application.yml
@@ -15,6 +15,11 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+      default-filters:
+        - name: CircuitBreaker
+          args:
+            name: defaultCircuitBreaker
+            fallbackUri: forward:/fallback
 eureka:
   client:
     service-url:
