--- a/api-gateway-service-v1/application.yml
+++ b/api-gateway-service-v1/application.yml
@@ -54,3 +54,8 @@ resilience4j:
     configs: 
       default:
         timeout-duration: "3s"
+  retry:
+    configs:
+      default:
+        max-attempts: 3
+        wait-duration: "2s"
