--- a/api-gateway-service-v1/application.yml
+++ b/api-gateway-service-v1/application.yml
@@ -50,6 +50,7 @@ resilience4j:
         waitDurationInOpenState: "5s"
         permittedNumberOfCallsInHalfOpenState: 3
         automaticTransitionFromOpenToHalfOpenEnabled: true
+        minimum-number-of-calls: 5
   timelimiter:
     configs: 
       default:
