--- a/discovery-service/application.yml
+++ b/discovery-service/application.yml
@@ -4,6 +4,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+  instance:
+    prefer-ip-address: true
 logging:
   level:
     com.netflix.eureka: OFF
