--- a/api-gateway-service-v2/application.yml
+++ b/api-gateway-service-v2/application.yml
@@ -15,6 +15,7 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+          service-id-prefix: false
       default-filters:
         - name: CircuitBreaker
           args:
