Set multipart.max-file-size property to application.yml

--- a/image-service/application.yml
+++ b/image-service/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8092
 spring:
+  servlet:
+    multipart:
+      max-file-size: "5MB"
+      max-request-size: "6MB"
   security:
     oauth2:
       resourceserver:
