--- a/forum-service-v2/application.yml
+++ b/forum-service-v2/application.yml
@@ -15,3 +15,7 @@ spring:
       ddl-auto: validate
     show-sql: true
     format-sql: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8766/eureka/
