--- a/farm-monitoring-service/application.yml
+++ b/farm-monitoring-service/application.yml
@@ -16,3 +16,7 @@ spring:
       dialect: org.hibernate.spatial.dialect.postgis.PostgisDialect
     show-sql: true
     format-sql: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8766/eureka/
