--- a/gateway-service/application.yml
+++ b/gateway-service/application.yml
@@ -24,6 +24,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://client:12345@localhost:8766/eureka/
+    register-with-eureka: true
+    fetch-registry: true
 
 # Actuator endpoints
 management:
