--- a/gateway-service/application.yml
+++ b/gateway-service/application.yml
@@ -23,7 +23,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://client:12345@localhost:8766/eureka/
+      defaultZone: http://localhost:8766/eureka/
     register-with-eureka: true
     fetch-registry: true
 
